# Slate

./: .gitignore  README.md  editor.html  index.html  prompt.html  start.html  template.html
api/: fetch-slate.ts
example/: deck.html
mcp/: README.md  pyproject.toml
mcp/slate_mcp/: __init__.py  server.py
skill/: SKILL.md
skill/assets/: frame-markup.html  frame.css  frame.js
